--- a/src/SAGisXPlanung/ui/settings.ui
+++ b/src/SAGisXPlanung/ui/settings.ui
@@ -452,7 +452,7 @@
         </font>
        </property>
        <property name="text">
-        <string>-</string>
+        <string>- Community Edition - </string>
        </property>
       </widget>
      </item>
