--- a/src/SAGisXPlanung/ui/nexus_dialog.ui
+++ b/src/SAGisXPlanung/ui/nexus_dialog.ui
@@ -33,6 +33,9 @@
       </widget>
      </item>
      <item>
+      <widget class="QComboBox" name="combo_plan_type"/>
+     </item>
+     <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -119,6 +122,27 @@
         </size>
        </property>
       </spacer>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_result_count">
+       <property name="text">
+        <string>0 Ergebnisse</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QToolButton" name="button_before">
+       <property name="text">
+        <string>...</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QToolButton" name="button_next">
+       <property name="text">
+        <string>...</string>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
