plan type filter
(cherry picked from commit 26393bc81d96ea02fe1b82525bdcd746932ae0d4)

--- a/src/SAGisXPlanung/ui/nexus_dialog.ui
+++ b/src/SAGisXPlanung/ui/nexus_dialog.ui
@@ -104,6 +104,13 @@
       </widget>
      </item>
      <item>
+      <widget class="QToolButton" name="button_map">
+       <property name="text">
+        <string>...</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QToolButton" name="button_delete">
        <property name="text">
         <string>...</string>
