--- a/src/SAGisXPlanung/ui/settings.ui
+++ b/src/SAGisXPlanung/ui/settings.ui
@@ -240,27 +240,34 @@
               <item row="0" column="1">
                <widget class="QComboBox" name="cbConnections"/>
               </item>
-              <item row="1" column="0">
+              <item row="2" column="0">
                <widget class="QLabel" name="label_2">
                 <property name="text">
                  <string>Nutzername</string>
                 </property>
                </widget>
               </item>
-              <item row="1" column="1">
+              <item row="2" column="1">
                <widget class="QLineEdit" name="tbUsername"/>
               </item>
-              <item row="2" column="0">
+              <item row="3" column="0">
                <widget class="QLabel" name="label_3">
                 <property name="text">
                  <string>Passwort</string>
                 </property>
                </widget>
               </item>
-              <item row="2" column="1">
+              <item row="3" column="1">
                <widget class="QLineEdit" name="tbPassword">
                 <property name="echoMode">
                  <enum>QLineEdit::Password</enum>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="1">
+               <widget class="QLabel" name="label_extra_info">
+                <property name="text">
+                 <string>ExtraInfo</string>
                 </property>
                </widget>
               </item>
