--- a/src/SAGisXPlanung/ui/XPlanung_dialog_base.ui
+++ b/src/SAGisXPlanung/ui/XPlanung_dialog_base.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>395</width>
-    <height>423</height>
+    <width>466</width>
+    <height>543</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -253,6 +253,9 @@
        <item>
         <widget class="QWidget" name="progress_widget" native="true">
          <layout class="QHBoxLayout" name="layout_progress">
+          <property name="rightMargin">
+           <number>0</number>
+          </property>
           <item>
            <widget class="QLabel" name="progress_label">
             <property name="sizePolicy">
@@ -278,6 +281,13 @@ color: #374151;</string>
             </property>
             <property name="text">
              <string>Objekte gelesen</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QToolButton" name="button_cancel_import">
+            <property name="text">
+             <string>...</string>
             </property>
            </widget>
           </item>
