complete docs setup, menu entry for docs, ...
(cherry picked from commit f8c7fee6acb9d7821db5f9a53e68f4a5f0ae89aa)

--- a/docs/docs/stylesheets/nti.css
+++ b/docs/docs/stylesheets/nti.css
@@ -43,6 +43,15 @@ article a:hover {
   font-weight: 400;
   font-size: smaller;
 }
+.ce-label {
+  display: inline-block;
+  padding: 2px 8px;
+  background-color: #087cfa;
+  border-radius: 4px;
+  color: #fff;
+  font-weight: 400;
+  font-size: smaller;
+}
 
 .procedure {
   padding: 16px;
